# ComplianceResearchAssistant

./: .gitignore  README.md  app.py  pyproject.toml
agent/: __init__.py  executor.py  guardrails.py  loop.py  planner.py  synthesizer.py
ingestion/: ingest_docs.py
prompts/: system.py
tools/: rag_search.py  web_search.py
